--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1> 
+    <span id="typed" style="white-space:pre;">Haters gonna hate</span><span class="typed-cursor">|</span>
+    <hr>
+    </h1>
 </body>
 </html>
 
