--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <h1> 
-    <span id="typed" style="white-space:pre;">Haters gonna hate</span><span class="typed-cursor">|</span>
+    <span id="typed" style="white-space:pre;">Haters gonna hate</span>
+    <span class="typed-cursor">|</span>
 </h1>
 </body>
 </html>
