--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<h1> 
-    <span id="typed" style="white-space:pre;">Haters gonna hate</span>
-    <span class="typed-cursor">|</span>
-</h1>
-</body>
+    <head>
+			
+		</head>
+	
+    <body>
+		<p class="line-1 anim-typewriter">Animation typewriter style using css steps()</p>
+    <h1>Hello World</h1>
+    </body>
 </html>
 
