--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 		</head>
 	
     <body>
-		<p class="line-1 anim-typewriter">Animation typewriter style using css steps()</p>
     <h1>Hello World</h1>
+	    <h1>
+  <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Si.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+    <span class="wrap"></span>
+  </a>
+</h1>
     </body>
 </html>
 
