--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
-			
-		</head>
-	
-    <body>
+<head>
+  <link rel="stylesheet" href="styles.css">		
+</head>
+<body>
     <h1>Hello World</h1>
 	    <h1>
   <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Si.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
