--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">		
+  <link rel="line-1 anim-typewriter" href="typerwriterpen.css">		
 </head>
 <body>
-    <h1>Hello World</h1>
-	    <h1>
-  <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Si.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
-    <span class="wrap"></span>
-  </a>
-</h1>
-    </body>
+    <p class="line-1 anim-typewriter">Hi</p>
+</body>
 </html>
 
