--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="line-1 anim-typewriter" href="typerwriterpen.css">		
+  <link rel="typewriterstyle" href="typerwriterpen.css">		
 </head>
 <body>
     <p class="line-1 anim-typewriter">Hi</p>
