--- a/Pages/index.html
+++ b/Pages/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title> CodeSpam </title>
   <link rel="typewriterstyle" href="typerwriterpen.css">		
 </head>
 <body>
