--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title> CodeSpam </title>
+  <h1> CODESPAM <h2>
   <link rel="typewriterstyle" href="typerwriterpen.css">		
 </head>
 <body>
