--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title> CodeSpam </title>
   <h1> CODESPAM <h2>
-  <link rel="typewriterstyle" href="typerwriterpen.css">		
+  <link rel="typewriterstyle" href="stylesheets/typerwriterpen.css">		
 </head>
 <body>
 
