--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
   <title> CodeSpam </title>
-  <h1> CODESPAM <h2>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link rel="typewriterstyle" href="stylesheets/typerwriterpen.css">		
 </head>
 <body>
-
+  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
 
