--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title> CodeSpam </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="css/bootstrap.css" rel="stylesheet" media="screen">
   <link rel="typewriterstyle" href="stylesheets/typerwriterpen.css">		
 </head>
 <body>
   <script src="http://code.jquery.com/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.js"></script>
 </body>
 </html>
 
