--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
             <li class="list-inline-item">
-              <a href="#" class="btn btn-secondary btn-lg">
-                <i class="fa fa-twitter fa-fw"></i>
-                <span class="network-name">Twitter</span>
+              <a href="https://www.instagram.com/randumb_person_ver2.003/" class="btn btn-secondary btn-lg">
+                <i class="fa fa-instagram fa-fw"></i>
+                <span class="network-name">Instagram</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" class="btn btn-secondary btn-lg">
+              <a href="https://github.com/HTY2003/" class="btn btn-secondary btn-lg">
                 <i class="fa fa-github fa-fw"></i>
                 <span class="network-name">Github</span>
               </a>
