--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/HTY2003/" class="btn btn-secondary btn-lg">
-                <i class="fa fa-github fa-fw"></i>
-                <span class="network-name">Github</span>
+              <a href="https://www.facebook.com/heng.tengyi" class="btn btn-secondary btn-lg">
+                <i class="fa fa-facebook fa-fw"></i>
+                <span class="network-name">Facebook</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" class="btn btn-secondary btn-lg">
-                <i class="fa fa-linkedin fa-fw"></i>
-                <span class="network-name">Linkedin</span>
+              <a href="https://github.com/HTY2003/" class="btn btn-secondary btn-lg">
+                <i class="fa fa-github fa-fw"></i>
+                <span class="network-name">Github</span>
               </a>
             </li>
           </ul>
