--- a/index.html
+++ b/index.html
@@ -153,26 +153,26 @@
 
         <div class="row">
           <div class="col-lg-6 my-auto">
-            <h2>Connect to Start Bootstrap:</h2>
+            <h3> Check out my social media!</h3>
           </div>
           <div class="col-lg-6 my-auto">
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
+               <a href="https://www.instagram.com/randumb_person_ver2.003/" class="btn btn-secondary btn-lg">
+               <i class="fa fa-instagram fa-fw"></i>
+               <span class="network-name">Instagram</span>
+               </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/heng.tengyi" class="btn btn-secondary btn-lg">
+                  <i class="fa fa-facebook fa-fw"></i>
+                  <span class="network-name">Facebook</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://github.com/HTY2003/" class="btn btn-secondary btn-lg">
                   <i class="fa fa-github fa-fw"></i>
                   <span class="network-name">Github</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-linkedin fa-fw"></i>
-                  <span class="network-name">Linkedin</span>
                 </a>
               </li>
             </ul>
