--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="stylesheets/typewriter.css">
   </head>
 
   <body>
@@ -52,7 +52,11 @@
       <div class="container">
         <div class="intro-message">
           <h1>CodeSpam</h1>
-          <h3>An absolutely pointless site.</h3>
+          <h3>
+            <a href="" class="typewrite" data-period="2000" data-type='[ "An absolutely pointless site.", "By an abosutely useless person." ]'>
+            <span class="wrap"></span>
+            </a>
+         </h3>
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
             <li class="list-inline-item">
