--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="intro-message">
           <h1>CodeSpam</h1>
           <h3>
-            <a href="" class="typewrite" data-period="2000" data-type='[ "An absolutely pointless site.", "By an abosutely useless person." ]'>
+            <a href="stylesheets/typewriter.css" class="typewrite" data-period="2000" data-type='[ "An absolutely pointless site.", "By an abosutely useless person." ]'>
             <span class="wrap"></span>
             </a>
          </h3>
