--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
       <div class="container">
         <div class="intro-message">
           <h1>CodeSpam</h1>
-          <h1>
-            <a href="stylesheets/typewriter.css" class="typewrite" data-period="2000" data-type='[ "An absolutely pointless site.", "By an abosutely useless person." ]'>
-            <span class="wrap"></span>
-            </a>
-         </h1>
+          <div class="typewriter">
+            <h1>An absolutely pointless site.</h1>
+          </div>
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
             <li class="list-inline-item">
