--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
         <div class="intro-message">
           <h1>CodeSpam</h1>
           <div class="typewriter">
-            <h1>An absolutely pointless site.</h1>
+            <h3>
+              <a href="" class="typewrite" data-period="2000" data-type='[ "An abolutely pointless site.", "By an absolutely pointless person." ]'>
+              <span class="wrap"></span>
+              </a>
+            </h3>
           </div>
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
