--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/typewriter.css">
+    <script src="https://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
   </head>
 
   <body>
