--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/typewriter.css">
-    <script src="https://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+    <style>
+        body {
+        background-color:#ce3635;
+        text-align: center;
+        color:#fff;
+        padding-top:10em;
+      }
+      * { color:#fff; text-decoration: none;}
+    </style>
   </head>
 
   <body>
