--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/typewriter.css">
-    <style>
-        body {
-        text-align: center;
-        color:#fff;
-      }
-      * { color:#fff; text-decoration: none;}
-    </style>
   </head>
 
   <body>
@@ -60,7 +53,7 @@
         <div class="intro-message">
           <h1>CodeSpam</h1>
           <div class="typewriter">
-            <h3>
+            <h3 style = "text-align: center; color:#fff;">
               <a href="" class="typewrite" data-period="1000" data-type='[ "An abolutely pointless site.", "By an absolutely pointless person." ]'>
               <span class="wrap"></span>
               </a>
