--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="intro-message">
           <h1>CodeSpam</h1>
           <div class="typewriter">
-            <h4 style = "text-align: center; color:#fff;">
+            <h4 style = "text-align: center; color:#fff;text-decoration: none;">
               <a href="" class="typewrite" data-period="1000" data-type='[ "An abolutely pointless site.", "By an absolutely pointless person." ]'>
               <span class="wrap"></span>
               </a>
