--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/typewriter.css">
+    <style>
+      body{text-decoration: none;}
+    </style>
   </head>
 
   <body>
@@ -53,8 +56,8 @@
         <div class="intro-message">
           <h1>CodeSpam</h1>
           <div class="typewriter">
-            <h4 style = "text-align: center; color:#fff;text-decoration: none;">
-              <a href="" class="typewrite" data-period="1000" data-type='[ "An abolutely pointless site.", "By an absolutely pointless person." ]'>
+            <h4 style = "text-align:center; color:#fff;text-decoration: none;">
+              <a class="typewrite" data-period="1000" data-type='[ "An abolutely pointless site.", "By an absolutely pointless person." ]'>
               <span class="wrap"></span>
               </a>
             </h4>
