--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <div class="intro-message">
           <h1>CodeSpam</h1>
           <div class="typewriter">
-            <h4 style = "text-align:center; color:#fff;text-decoration: none;">
-              <a class="typewrite" data-period="1000" data-type='[ "An abolutely pointless site.", "By an absolutely pointless person." ]'>
+            <h5 style = "text-align:center; color:#fff;text-decoration: none;">
+              <a class="typewrite" data-period="1000" data-type='[ "An absolutely pointless site.", "By an absolutely pointless person." ]'>
               <span class="wrap"></span>
               </a>
-            </h4>
+            </h5>
           </div>
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
