--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <a class="nav-link" href="https://hty2003.github.io/apps.html">Apps</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="https://hty2003.github.io/posts.html">Posts</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
