--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title> CodeSpam </title>
-
+    <link rel=icon href=/IMG-2813.jpg>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -153,10 +153,8 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-            <p class="lead">A special thanks to
-              <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>
-              for providing the photographs that you see in this template. Visit their website to become a member.</p>
+            <h2 class="section-heading">So...who wrote this useless crap?</h2>
+            <p class="lead">Well, I'm a programming noob. A certain rant about how </p>
           </div>
           <div class="col-lg-5 mr-auto">
             <img class="img-fluid" src="img/ipad.png" alt="">
