--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title> CodeSpam </title>
-    <link rel=icon href=/icon.jpg>
+    <link rel=icon href=icon.jpg>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
