--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <h1>CodeSpam</h1>
           <div class="typewriter">
             <h5 style = "text-align:center; color:#fff;text-decoration: none;">
-              <a class="typewrite" data-period="1000" data-type='[ "An absolutely pointless site.", "By an absolutely pointless person." ]'>
+              <a class="typewrite" data-period="1000" data-type='[ "An absolutely pointless site.", "By an absolutely useless person." ]'>
               <span class="wrap"></span>
               </a>
             </h5>
