--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">So...who wrote this useless crap?</h2>
-            <p class="lead">Well, I'm a programming noob. A certain rant about how </p>
+            <p class="lead">Well, I'm a terrible programmer. Who only knows Python. But is trying to learn other stuff. A certain</p>
+            <a href = "https://derpz.ga/2017/10/rant-of-the-nuode-site/"> rant </a>
+            <p class= "lead"> about how some dude simply copied code off the internet to make his website. So, as someone with no HTML experiece whatsoever,I was inspired to do just that</p>
           </div>
           <div class="col-lg-5 mr-auto">
             <img class="img-fluid" src="img/ipad.png" alt="">
