--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </p>
           </div>
           <div class="col-lg-5 mr-auto ">
-            <img class="img-fluid" src="img/Logo.jpg" alt="">
+            <img class="img-fluid" src="img/Logo.JPG" alt="">
           </div>
         </div>
 
